<resources>
    <string name="app_name">Weatherify</string>

    <!--Common-->
    <string name="no_internet_connection_txt">Please make sure you have an internet connection and try again</string>
    <string name="error_txt">Ups! Unable to retrieve weather forecast information now, please try again later</string>

    <!--daily weather brief compound view-->
    <string name="degree_icon_iv_description">Temperature degree icon</string>
    <string name="phenomenon_iv_description">Phenomenon icon</string>
    <string name="weather_detail_btn_txt">SEE MORE WEATHER INFORMATION</string>
    <string name="celsius_symbol_tv_txt">C</string>

    <!--brief weather activity-->
    <string name="four_days_weather_title_tv_txt">Estonian 4 Days Weather Forecast</string>
    <string name="brief_weather_hint_tv_txt">Select one for more information</string>
    <string name="status_tv_retrieving_txt">Retrieving four days weather forecast information</string>
    <string name="cached_data_displayed_toast_txt">No internet connection, displaying latest available weather forecast information</string>

    <!--detail weather activity-->
    <string name="day_night_switch_day_txt">Day</string>
    <string name="day_night_switch_night_txt">Night</string>
    <string name="temp_max_label_txt">Maximum Temperature</string>
    <string name="temp_min_label_txt">Minimum Temperature</string>
    <string name="sea_label_txt">Sea</string>
    <string name="peipsi_label_txt">Peipsi</string>
    <string name="places_label_txt">Places</string>
    <string name="places_hint_tv_txt">Tap a city to see more information</string>
    <string name="winds_label_txt">Winds</string>

    <!--city item layout-->
    <string name="phenomenon_iv_img_description">Phenomenon icon</string>

    <!--wind item layout-->
    <string name="direction_tv_txt">Direction: %1$s</string>
    <string name="max_speed_tv_txt">Max Speed: %1$d m/s</string>
    <string name="min_speed_tv_txt">Min Speed: %1$d m/s</string>
    <string name="no_temperature_available_txt">--</string>

</resources>
