<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.detail.DetailWeatherActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/day_night_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/day_night_switch_day_txt"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:switchPadding="5dp" />

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day_night_switch"
            tools:text="Sun, 09 Jun 2019" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weather_info_container"
            style="@style/ContainerStyle"
            android:layout_height="360dp"
            app:layout_constraintTop_toBottomOf="@+id/date_tv"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/temp_max_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/temp_max_label_txt"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/temp_max_view"
                app:layout_constraintEnd_toStartOf="@+id/phenomenon_iv"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.tatar.weatherify.ui.base.TemperatureCompoundView
                android:id="@+id/temp_max_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/phenomenon_tv"
                app:layout_constraintEnd_toEndOf="@+id/temp_max_label"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/temp_max_label"
                app:layout_constraintTop_toBottomOf="@+id/temp_max_label" />

            <ImageView
                android:id="@+id/phenomenon_iv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/phenomenon_iv_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/cloudy_night" />

            <TextView
                android:id="@+id/phenomenon_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phenomenon_iv"
                tools:text="Cloudy with clear spell" />

            <TextView
                android:id="@+id/weather_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phenomenon_tv"
                tools:text="Slightly or partly cloudy. Rain showers and thunder in places. Probability for precipitation is higher in western part. East wind 5-10, on coast in gusts 15 m/s. Air temperature 9..15°C." />

            <TextView
                android:id="@+id/temp_min_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/temp_min_label_txt"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/temp_min_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/phenomenon_iv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.tatar.weatherify.ui.base.TemperatureCompoundView
                android:id="@+id/temp_min_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/phenomenon_tv"
                app:layout_constraintEnd_toEndOf="@+id/temp_min_label"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/temp_min_label"
                app:layout_constraintTop_toBottomOf="@+id/temp_min_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/places_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_view_daily_weather_brief"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_info_container">

            <TextView
                android:id="@+id/places_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/places_label_txt"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/places_hint_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/places_hint_tv_txt"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/places_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/place_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/places_hint_tv"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/winds_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_view_daily_weather_brief"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/places_container">

            <TextView
                android:id="@+id/winds_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/winds_label_txt"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/wind_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/winds_label"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sea_info_container"
            style="@style/ContainerStyle"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/winds_container"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/sea_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sea_label_txt"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sea_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sea_label"
                tools:text="Forecast for Baltic Sea valid 24 hours from 19:00 Jun 12 to 19:00 UTC Jun 13, 2019.\n\nWeather summary: High moving from Finland southeastwards. Low over Poland moving towards Southern Scandinavia.\n\nWarnings: \nNorthern Baltic, Western Gulf of Finland: northeast in gusts 15 to 18 m/s. Wave height 1.5 to 3 m. \nEastern Gulf of Finland, Moonsund, Northern Gulf of Riga: northeast in gusts up to 15 m/s. Wave height 1 to 2 m, in Moonsund 0.7 to 1 m. \n\n\nNorthern Baltic, Western Gulf of Finland: northeast, east 8 to 13, in gusts up to 18 m/s, after midnight east, southeast 7 to 12, in gusts 15 m/s, afternoon decreasing. Wave height 1,5 to 3 m. Locally rain showers, risk of thunder. Good visibility.\n\nEastern Gulf of Finland, Moonsund, Northern Gulf of Riga: northeast, east, after midnight east, southeast 6 to 11 m/s, gusts up to 15 m/s, afternoon decreasing. Wave height 1 to 2 m, in Moonsund 0.7 to 1 m. Locally rain showers, risk of thunder. Good visibility.\n" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/peipsi_info_container"
            style="@style/ContainerStyle"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sea_info_container"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/peipsi_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/peipsi_label_txt"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/peipsi_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/peipsi_label"
                tools:text="East, southeast wind 5-10 m/s, in evening decreasing. Wave height 0,5-1 m. Rain showers and thunder possible in places. Visibility good. Air temperature 21..23°C." />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>