<?xml version="1.0" encoding="utf-8"?><!--android:background="?android:selectableItemBackground"-->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    tools:background="@color/colorPrimaryDark"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <TextView
        android:id="@+id/day_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/date_tv"
        app:layout_constraintEnd_toEndOf="@+id/date_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/date_tv"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Thursday" />

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/time_tv"
        app:layout_constraintEnd_toStartOf="@+id/temperature_max_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_tv"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="30 May 2019" />

    <TextView
        android:id="@+id/time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/date_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/date_tv"
        app:layout_constraintTop_toBottomOf="@+id/date_tv"
        tools:text="14:35" />

    <TextView
        android:id="@+id/temperature_max_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:textColor="@android:color/white"
        android:textSize="64sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/degree_icon_iv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="9" />

    <ImageView
        android:id="@+id/degree_icon_iv"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/degree_icon_iv_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/temperature_max_tv"
        app:layout_constraintTop_toTopOf="@+id/temperature_max_tv"
        app:srcCompat="@drawable/degree" />

    <TextView
        android:id="@+id/celsius_symbol_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:text="@string/celsius_symbol_tv_txt"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/degree_icon_iv"
        app:layout_constraintStart_toEndOf="@+id/degree_icon_iv"
        app:layout_constraintTop_toTopOf="@+id/degree_icon_iv" />

    <TextView
        android:id="@+id/phenomenon_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/phenomenon_iv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/phenomenon_iv"
        app:layout_constraintTop_toBottomOf="@+id/phenomenon_iv"
        tools:layout_editor_absoluteY="58dp"
        tools:text="Clear" />

    <ImageView
        android:id="@+id/phenomenon_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/phenomenon_iv_description"
        app:layout_constraintBottom_toTopOf="@+id/phenomenon_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/celsius_symbol_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteY="18dp"
        tools:srcCompat="@drawable/cloudy_night" />
</merge>
